# pylogrouter

./: .gitignore  LICENSE  README.md  example.py  log_output_mockup.sh  pyproject.toml  release.sh
.github/workflows/: ci.yml
src/pylogrouter/: __init__.py  errors.py  facilities.py  router.py  types.py
src/pylogrouter/templates/: log_document.html
tests/: test_pylogrouter.py
