[project]
name = "pylogrouter"
version = "0.1.0"
description = "Python Log Router with console, file and HTML facilities"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.14"
dependencies = []

[project.urls]
Homepage = "https://github.com/mykolarudenko/pylogrouter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pylogrouter"]

[tool.hatch.build.targets.wheel.force-include]
"src/pylogrouter/templates/log_document.html" = "pylogrouter/templates/log_document.html"

[tool.hatch.build.targets.sdist]
include = [
  "src/pylogrouter/**",
  "src/pylogrouter/templates/log_document.html",
  "LICENSE",
]

[dependency-groups]
dev = [
  "pytest",
]
